--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
+html {
+  font-size: 16px;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.app-nav {
+  height: 85px;
+  background-color: rgba(8, 82, 82, 0.308);
+  font-family: cursive;
+  /* z-index: 12; */
+  border-bottom: solid 1px;
+  padding: 1.5rem 1.5rem 0.5rem 1.5rem; /* top right bottom left*/
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#nav-header {
+  font-size: 1.5rem;
+  text-shadow: 2px 2px blueviolet;
+  box-shadow: 3px 6px black;
+  padding: 6px;
+  border: 3px solid darkred;
+  background-color: rgba(0, 0, 255, 0.37);
+}
+
+.nav-link {
+  /* display: flex;
+  align-items: center; */
+  text-decoration: none;
+  padding: 0 1rem;
+  /* height: 100%; */
+  cursor: pointer;
+}
+.nav-link:active {
+  color: blue;
+}
+.nav-link:hover {
+  text-decoration: underline;
+  color: red;
+}
+
+tr:hover {
+  background: lightcyan;
+}
+
+tr {
+  height: 30px;
+}
+
+td {
+  padding-right: 30px;
+}
+
+button {
+  cursor: pointer;
+  background-color: darkslateblue;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  font-size: 1.2rem;
+}
+
+.invoice-form {
+  border: 1px solid black;
+  border-radius: 20px;
+  padding: 20px;
+  max-width: 300px;
+  box-shadow: 0 3px 10px rgba(0 0 0 / 0.2);
+  background-color: rgb(172, 214, 193);
+}
+
+.invoice-form-label {
+  margin: 20px 0 10px 0;
+  font-size: 1rem;
+}
+
+input {
+  width: 100%;
+  font-size: 1.5rem;
 }
